# xmms2_applet

./: 00todo  Makefile  Makefile.am  Makefile.in  README  XMMS2Applet.schemas.in  XMMS2Applet.server.in.in  XMMS2Applet.xml  aclocal.m4  autogen.sh  check.sh  config.h.in  configure  configure.ac
macros2/: gnome-autogen.sh
src/: Makefile.am  Makefile.in  about.c  about.h  app.h  appconf.c  appconf.h  appconn.c  appconn.h  apppref.c  apppref.h  appscrolledtext.c  appscrolledtext.h  common.h  xmms2_applet.c
src/old/: appconf.c  appconf.h  cfaclientsocket.c  cfaclientsocket.h  cfacond.c  cfacond.h  cfacondeditor.c  cfacondeditor.h  cfacondeditordialog.c  cfacondeditordialog.h  cfaconn.c  cfaconn.h  cfacpustates.c  cfacpustates.h  cfaflag.c  cfaflag.h  cfaintstack.c  cfaintstack.h  cfamarshal.c  cfamarshal.h  cfamarshal.list  cfameter.c  cfameter.h  cfapreferences.c  cfapreferences.h  cfapreftype.h  cfasocket.c  cfasocket.h  cfasocketreceivebuffer.c  cfasocketreceivebuffer.h  cfasocketsendbuffer.c  cfasocketsendbuffer.h  cfastate.c  cfastate.h  cfastringtokenizer.c  cfastringtokenizer.h  free_string_list.c  free_string_list.h  freqstr.c  freqstr.h  (+3 more)
